kubernetes/platform/harbor/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: harbor-ingress
  namespace: harbor
spec:
  endpointSelector:
    matchLabels:
      app: harbor
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: harbor
    - fromEntities:
        - ingress
        - cluster
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: harbor-egress
  namespace: harbor
spec:
  endpointSelector:
    matchLabels:
      app: harbor
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - cluster
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
